<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.TweetDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_tweet_detail_avatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:contentDescription="@string/tweet_profile_image"
            android:transitionName="transition_avatar"
            tools:src="@drawable/profile_image" />

        <TextView
            android:id="@+id/tv_tweet_detail_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:fontFamily="sans-serif-black"
            android:padding="8dp"
            android:textSize="26sp"
            android:transitionName="transition_user_name"
            tools:text="@string/my_name" />


        <TextView
            android:id="@+id/tv_tweet_detail_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:transitionName="transition_text"
            tools:text="@string/my_tweet" />


        <TextView
            android:id="@+id/tv_tweet_detail_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="italic"
            tools:text="@string/my_tweet_date" />


        <ImageView
            android:id="@+id/iv_tweet_detail_sound"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:contentDescription="@string/play_sound"
            android:src="@drawable/ic_round_play_arrow_24"
            app:tint="@color/blue" />


    </LinearLayout>
</ScrollView>