<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    android:id="@+id/card_view_tweet_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    android:layout_margin="8dp"
    android:padding="8dp"
    android:elevation="4dp"
    app:cardBackgroundColor="#FFF">

<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/iv_tweet_profile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="8dp"
        tools:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/tweet_profile_image" />

    <TextView
        android:id="@+id/tv_tweet_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="sans-serif-black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_tweet_profile"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/my_name"
        android:textColor="@color/dark_gray"
        />

    <TextView
        android:id="@+id/tv_tweet_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_tweet_profile"
        app:layout_constraintTop_toBottomOf="@+id/tv_tweet_user_name"
        tools:text="@string/my_tweet" />


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>